Fix spacing

--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -29,6 +29,10 @@
     padding: 5px;
     background-color: white;
     color: #333;
+    h2 {
+      margin: 0px;
+      padding: 5px;
+    }
     &.active{
       color: white;
       background-color: #333;
